@@ -202,26 +202,41 @@ sub get_job_stat_infos($$) {
 # parameters : base, resource
 # return value : list of jobid
 # side effects : /
+my %Resource_job;
+my $Resource_job_init = 0;
 sub get_resource_job($$) {
     my $dbh = shift;
     my $resource = shift;
-    my $sth = $dbh->prepare("   SELECT jobs.job_id
-                                FROM assigned_resources, moldable_job_descriptions, jobs
-                                WHERE
-                                    assigned_resources.assigned_resource_index = \'CURRENT\'
-                                    AND moldable_job_descriptions.moldable_index = \'CURRENT\'
-                                    AND assigned_resources.resource_id = $resource
-                                    AND assigned_resources.moldable_job_id = moldable_job_descriptions.moldable_id
-                                    AND moldable_job_descriptions.moldable_job_id = jobs.job_id
-                                    AND jobs.state != \'Terminated\'
-                                    AND jobs.state != \'Error\'
+
+    if ($Resource_job_init > 0){
+        if (defined($Resource_job{$resource})){
+            return(@{$Resource_job{$resource}});
+        }else{
+            return(());
+        }
+    }else{
+        my $sth = $dbh->prepare("   SELECT assigned_resources.resource_id, jobs.job_id
+                                    FROM assigned_resources, moldable_job_descriptions, jobs
+                                    WHERE
+                                        assigned_resources.assigned_resource_index = \'CURRENT\'
+                                        AND moldable_job_descriptions.moldable_index = \'CURRENT\'
+                                        AND assigned_resources.moldable_job_id = moldable_job_descriptions.moldable_id
+                                        AND moldable_job_descriptions.moldable_job_id = jobs.job_id
+                                        AND jobs.state != \'Terminated\'
+                                        AND jobs.state != \'Error\'
                             ");
-    $sth->execute();
-    my @res = ();
-    while (my $ref = $sth->fetchrow_hashref()) {
-        push(@res, $ref->{'job_id'});
+        $sth->execute();
+        my @res = ();
+        $Resource_job_init++;
+        while (my $ref = $sth->fetchrow_hashref()) {
+            push(@{$Resource_job{$ref->{'resource_id'}}}, $ref->{'job_id'});
+        }
+        if (defined($Resource_job{$resource})){
+            return(@{$Resource_job{$resource}});
+        }else{
+            return(());
+        }
     }
-    return @res;
 }
 
 # list_nodes
@@ -250,21 +265,24 @@ sub list_nodes($) {
 # parameters : base, resource id
 # return value : ref
 # side effects : /
+my %Resource_info;
 sub get_resource_info($$) {
     my $dbh = shift;
     my $resource = shift;
 
-    my $sth = $dbh->prepare("   SELECT *
-                                FROM resources
-                                WHERE
-                                    resource_id = $resource
+    if (defined($Resource_info{$resource})){
+        return($Resource_info{$resource});
+    }else{
+        my $sth = $dbh->prepare("   SELECT *
+                                    FROM resources
                             ");
-    $sth->execute();
-
-    my $ref = $sth->fetchrow_hashref();
-    $sth->finish();
-
-    return $ref;
+        $sth->execute();
+        while (my $ref = $sth->fetchrow_hashref()) {
+            $Resource_info{$ref->{resource_id}} = $ref;
+        }
+        $sth->finish();
+        return($Resource_info{$resource});
+    }
 }
 
 # Get start_time for a given job
@@ -273,11 +291,11 @@ sub get_gantt_job_start_time($$){
     my $dbh = shift;
     my $job = shift;
 
-    my $sth = $dbh->prepare("SELECT gantt_jobs_predictions.start_time, gantt_jobs_predictions.moldable_job_id
-                             FROM gantt_jobs_predictions,moldable_job_descriptions
+    my $sth = $dbh->prepare("SELECT gantt_jobs_predictions_visu.start_time, gantt_jobs_predictions_visu.moldable_job_id
+                             FROM gantt_jobs_predictions_visu,moldable_job_descriptions
                              WHERE
                                 moldable_job_descriptions.moldable_job_id = $job
-                                AND gantt_jobs_predictions.moldable_job_id = moldable_job_descriptions.moldable_id
+                                AND gantt_jobs_predictions_visu.moldable_job_id = moldable_job_descriptions.moldable_id
                             ");
     $sth->execute();
     my @res = $sth->fetchrow_array();
